--- a/app/app.css
+++ b/app/app.css
@@ -47,6 +47,8 @@
 	--color-darkBackgroundHover: #1f1f2244;
 	--color-background: #171719;
 	--color-borderColor: #ebebff0d;
+	--color-pinkRed: #ef2f62;
+	--color-greenBlue: #00ffff;
 	--max-width-twelveHundred: 1200px;
 	--max-width-albumCardWidth: 255px;
 	--max-width-songCardWidth: 200px;
