--- a/app/app.css
+++ b/app/app.css
@@ -55,6 +55,7 @@
 	--min-height-albumCardHeight: 375px;
 	--min-height-songCardHeight: 275px;
 	--width-albumCardWidth: var(--max-width-albumCardWidth);
+	--height-albumCardImgHeight: var(--max-width-albumCardWidth);
 }
 
 :root {
